# iSchool

frontend/: .gitignore  GUIDE_SIMPLE_IMPORT.md  IMPORT_FEATURE_DOCUMENTATION.md  IMPORT_FORMAT.md  IMPORT_TEST.md  README.md  README_IMPORT.md  SUMMARY.md  UPLOAD_INSTRUCTIONS.md  pyproject.toml  students_import_example.csv  test_api.py
frontend/src/: financial_school_report_20251124_141858.json  main.py
frontend/src/core/: __init__.py  appstate.py  config.py  constants.py
frontend/src/data/api/: fake_client.py
frontend/src/data/fake/: fake_api.db  fake_data.py
frontend/src/langs/: en.json  es.json  fr.json  it.json  ln.json  ru.json  sw.json
frontend/src/models/: __init__.py  audit_log_model.py  cash_register_model.py  classroom_model.py  enrollment_model.py  expense_model.py  fee_model.py  payment_model.py  payment_type_model.py  role_model.py  school_year_model.py  settings_model.py  staff_model.py  staff_payment_model.py  student_model.py  user_model.py
frontend/src/screens/: __init__.py
frontend/src/screens/admin/: admin_components.py  admin_dialogs.py  admin_form_handlers.py  admin_forms.py  admin_screen.py  admin_services.py  admin_tables.py
frontend/src/screens/cash_register/: README.md  cash_register_components.py  cash_register_dialogs.py  cash_register_form_handlers.py  cash_register_forms.py  cash_register_screen.py  cash_register_services.py  cash_register_tables.py
frontend/src/screens/checkout/: __init__.py  checkout_components.py  checkout_dialogs.py  checkout_form_handlers.py  (+4 more)
frontend/src/utils/: __init__.py  storage_utils.py  utils.py
(+31 files in other folders)
