[project]
name = "iSchool"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Victoire Kitenge", email = "yumakitenge243@gmail.com" }]
dependencies = [
  "flet==0.70.0.dev5623",
  "faker>=25.0.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
]


[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "com.vickiapp"
product = "iSchool"
company = "VicKi app"
copyright = "Copyright (C) 2025 by VicKi App"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = ["flet[all]==0.70.0.dev5623"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.70.0.dev5623" }
